--- a/src/RickshawTable/rikshawtable.css
+++ b/src/RickshawTable/rikshawtable.css
@@ -12,3 +12,14 @@
     border-bottom: 2px solid #5BA505;
     width: 33%;
 }
+.heading-Form{
+    text-align: center;
+text-transform: capitalize;
+width: 30%;
+margin: auto;
+padding-bottom: 3px;
+padding-top: 12px;
+color: #555;
+font-size: 22px;
+font-weight: 700;
+}
